...
            "state": "translated",
            "value": "Hide"
          }
        }
      }
    },
    "表示": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reveal"
          }
...
            "state": "translated",
            "value": "Preparing terminal"
          }
        }
      }
    },
    "このセッションにタブを追加": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add a tab to this session"
...
            "state": "translated",
            "value": "This session’s tabs"
          }
        }
      }
    },
    "会話": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chat"
...
            "state": "translated",
            "value": "Open File…"
          }
        }
      }
    },
    "右に分割して開く": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Open in a split on the right"
...
            "state": "translated",
            "value": "The document could not be safely parsed. Edit it in source view."
          }
        }
      }
    },
    "シミュレーター": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Simulator"
...
